crates/nuff_linter/src/message/snapshots/nuff_linter__message__grouped__tests__fix_status_unsafe.snap
---
source: crates/nuff_linter/src/message/grouped.rs
expression: content
---
fib.py:
  1:8 F401 [*] `os` imported but unused
  6:5 F841 [*] Local variable `x` is assigned to but never used

undef.py:
  1:4 F821 Undefined name `a`
