crates/nuff_linter/src/message/snapshots/nuff_linter__message__grouped__tests__syntax_errors.snap
---
source: crates/nuff_linter/src/message/grouped.rs
expression: content
---
syntax_errors.py:
  1:15 invalid-syntax: Expected one or more symbol names after import
  3:12 invalid-syntax: Expected `)`, found newline
